linking to d3.js

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 	}
 
 	</style>
-
-	<script type="text/javascript" src="d3.v3.min.js"></script>     
+	
+	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 	<script src="http://www.worldwidetelescope.org/scripts/wwtsdk.aspx"></script>
 	<script>
 		 // declare global Worldwide Telescope object
