Added missing closing tags.
Modern browsers are pretty smart about guessing where to put in the
closing tags, but not closing tags is a good way to introduce bugs in
the markup.

--- a/index.html
+++ b/index.html
@@ -182,41 +182,45 @@
                         <br>
                         Click on one of the clock ticks to visualize the HR diagram corresponding to a real constellation of the specified age:
                         an image of the same costellation in the World Wide Telescope will appear on the right.
-                    <!-- Missing closing SPAN tag somewhere here -->
-                <!-- Missing closing P tag? -->
+                    </span>
+                </p>
             </div>  <!-- closes col-md-6 -->
         </div>  <!-- closes row -->
 
 
-        <!-- This should be in a row and a span, like everything else on the page. -->
-        <p style="color:black;width:100%;font-size:125%;"> 
-            Our Sun likely formed in a small cluster of stars that dissolved many years ago.
-            Here you can interact with a computer simulation of a 100-star cluster similar
-            to our Sun's birthplace, as it evolves in time from birth until the present day
-            (at an age of 5 billion years).
-            <br>
-            <!-- Each of these paragraphs probably wants to be in it's own P tag. -->
-            In the HR diagram on the left, watch as the most luminous stars quickly
-            evolve from the "main sequence" to become "giants". Indeed, all stars evolve in time,
-            with the most massive (and therefore most luminous) evolving most rapidly. You may also
-            notice two different branches of main-sequence stars; the branch to the red (right) 
-            on the plot is composed of binary stars--2 stars bound by their own mutual gravity and
-            orbiting each other, but unresolved from Earth at the distances to most clusters.
-            Can you find other stars that don't follow the standard evolutionary sequence?
-            <br>
-            In the middle, you see the stars moving in space as the cluster orbits around the Galaxy.
-            Watch as the cluster quickly dissolves under the tidal pull of our Galaxy and is drawn into a tight line, displaying "tidal tails" 
-            similar to those observed in real dissolving star clusters. You may also notice neutron stars leaving the cluster early at high velocities, 
-            due to large kicks imparted by the stars' very energetic supernovae explosions.  Our Sun likely escaped from its birth cluster like 
-            the majority of the stars in this simulation: slowly and calmly, and eventually leaving its sibling to live out its life in isolation--which was good news for us!
-        </p>
+        <div class="row">
+            <div class="col-md-12">
+                <p style="color:black;width:100%;font-size:125%;"> 
+                    Our Sun likely formed in a small cluster of stars that dissolved many years ago.
+                    Here you can interact with a computer simulation of a 100-star cluster similar
+                    to our Sun's birthplace, as it evolves in time from birth until the present day
+                    (at an age of 5 billion years).
+                    <br>
+                    <!-- Each of these paragraphs probably wants to be in it's own P tag. -->
+                    In the HR diagram on the left, watch as the most luminous stars quickly
+                    evolve from the "main sequence" to become "giants". Indeed, all stars evolve in time,
+                    with the most massive (and therefore most luminous) evolving most rapidly. You may also
+                    notice two different branches of main-sequence stars; the branch to the red (right) 
+                    on the plot is composed of binary stars--2 stars bound by their own mutual gravity and
+                    orbiting each other, but unresolved from Earth at the distances to most clusters.
+                    Can you find other stars that don't follow the standard evolutionary sequence?
+                    <br>
+                    In the middle, you see the stars moving in space as the cluster orbits around the Galaxy.
+                    Watch as the cluster quickly dissolves under the tidal pull of our Galaxy and is drawn into a tight line, displaying "tidal tails" 
+                    similar to those observed in real dissolving star clusters. You may also notice neutron stars leaving the cluster early at high velocities, 
+                    due to large kicks imparted by the stars' very energetic supernovae explosions.  Our Sun likely escaped from its birth cluster like 
+                    the majority of the stars in this simulation: slowly and calmly, and eventually leaving its sibling to live out its life in isolation--which was good news for us!
+                </p>
 
-        <p style="color:black;font-width:bold;font-size:125%;">
-            Credits: This plot has been created using <a href="http://d3js.org/">D3</a> inspired by
-            <a href="http://bost.ocks.org/mike/nations/">http://bost.ocks.org/mike/nations/</a> and uses
-            <a href="http://www.worldwidetelescope.org/">the World Wide Telescope</a>.
-            Data simulated by Aaron M. Geller, data visualized by Ester Pantaleo, project led by Mark Subbarao.</p>
-        <!-- Missing closing P tag -->
+                <p style="color:black;font-width:bold;font-size:125%;">
+                    Credits: This plot has been created using <a href="http://d3js.org/">D3</a> inspired by
+                    <a href="http://bost.ocks.org/mike/nations/">http://bost.ocks.org/mike/nations/</a> and uses
+                    <a href="http://www.worldwidetelescope.org/">the World Wide Telescope</a>.
+                    Data simulated by Aaron M. Geller, data visualized by Ester Pantaleo, project led by Mark Subbarao.</p>
+                </p>
+
+            </div> <!-- closes col-md-12 -->
+        </div> <!-- closes row -->
 
     </div> <!-- closes container -->
 
