Broke description text into paragraphs.
Using <p> tags instead of line breaks to separate paragraphs. Also moved
the style rules for <p> into the <style> section, so we don't have to
write it inline for every paragraph.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 	<style>
 	@import url(style.css?aea6f0a);
 
+    p {
+      color: black;
+      width: 100%;
+      font-size: 125%;
+    }
+
 	text {
 	  font-size: 100%;
 	  fill: yellow;
@@ -190,12 +196,12 @@
 
         <div class="row">
             <div class="col-md-12">
-                <p style="color:black;width:100%;font-size:125%;"> 
+                <p>
                     Our Sun likely formed in a small cluster of stars that dissolved many years ago.
                     Here you can interact with a computer simulation of a 100-star cluster similar
                     to our Sun's birthplace, as it evolves in time from birth until the present day
                     (at an age of 5 billion years).
-                    <br>
+                </p><p>
                     <!-- Each of these paragraphs probably wants to be in it's own P tag. -->
                     In the HR diagram on the left, watch as the most luminous stars quickly
                     evolve from the "main sequence" to become "giants". Indeed, all stars evolve in time,
@@ -204,7 +210,7 @@
                     on the plot is composed of binary stars--2 stars bound by their own mutual gravity and
                     orbiting each other, but unresolved from Earth at the distances to most clusters.
                     Can you find other stars that don't follow the standard evolutionary sequence?
-                    <br>
+                </p><p>
                     In the middle, you see the stars moving in space as the cluster orbits around the Galaxy.
                     Watch as the cluster quickly dissolves under the tidal pull of our Galaxy and is drawn into a tight line, displaying "tidal tails" 
                     similar to those observed in real dissolving star clusters. You may also notice neutron stars leaving the cluster early at high velocities, 
