--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ var cols = ["#ff3800","#ff5300","#ff6500","#ff7300","#ff7e00","#ff8912","#ff932c
 
 // Chart dimensions.
 var margin = {top: 0, right: 10, bottom: 80, left: 50},
-    width = 400,
+    width = Math.ceil(document.getElementById('chart').clientWidth * 0.9),
     height = 600,
     heightPlot= 600 - margin.bottom - margin.top,
     minTempScale = 1000,
