small changes to the README and added link to gihub repo

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ similar to those observed in real dissolving star clusters. You may also notice 
 due to large kicks imparted by the stars' very energetic supernovae explosions.  Our Sun likely escaped from its birth cluster like 
 the majority of the stars in this simulation: slowly and calmly, and eventually leaving its sibling to live out its life in isolation - which was good news for us!
       </p>
-      <p style="color:grey;font-size:1vw;">Credits: This plot has been created using <a href="http://d3js.org/">D3</a> and has been inspired by <a href="http://bost.ocks.org/mike/nations/">http://bost.ocks.org/mike/nations/</a>. Also it uses <a href="http://www.worldwidetelescope.org/">the World Wide Telescope</a>. The data were simulated by Aaron M. Geller and visualized by Ester Pantaleo; the project was led by Mark SubbaRao.</p>
+      <p style="color:grey;font-size:1vw;">Credits: This plot has been created using <a href="http://d3js.org/">D3</a> and has been inspired by <a href="http://bost.ocks.org/mike/nations/">http://bost.ocks.org/mike/nations/</a>. Also it uses <a href="http://www.worldwidetelescope.org/">the World Wide Telescope</a>. The data were simulated by Aaron M. Geller and visualized by Ester Pantaleo; the project was led by Mark SubbaRao. Source code is available on <a href="https://github.com/esterpantaleo/planetarium-chicago">github</a>.</p>
    </div>
 <script>
 
